<resources>
    <string name="app_name" translatable="false">Pins</string>
    <string name="title_myboard">My Board</string>
    <string name="title_teamboard">Team Board</string>
    <string name="title_profile">Profile Info</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_text">Sign\t</string>
    <string name="in_text">In</string>
    <string name="up_text">Up</string>
    <string name="no_account_text">Don\'t have an account?\t</string>
    <string name="existing_account_text">Already have an account?\t</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="say_hello">Say hello!</string>
    <string name="enter_a_valid_task_name">Enter a valid task name.</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="select_picture">Select Picture</string>
    <string name="cancelled">Cancelled</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="percentage">Percentage</string>
    <string name="project_left">Project Left</string>
    <string name="select_a_person_to_make_manager">Select a person to make Manager</string>
    <string name="enter_a_valid_project_code">Enter a valid Project code.</string>
    <string name="enter_a_valid_authorization_code">Enter a valid Authorization Code!</string>
    <string name="authorization_code_invalid">Authorization Code Invalid!</string>
    <string name="you_are_already_added_to_this_project">You are already added to this project.</string>
    <string name="join_request_sent">Join Request Sent.</string>
    <string name="please_enter_a_valid_email">Please enter a valid email!</string>
    <string name="password_cannot_be_empty">Password cannot be empty!</string>
    <string name="password_must_be_atleast_6_characters_long">Password must be at least 6 characters long!</string>
    <string name="signing_in_please_wait">Signing In Please Wait…</string>
    <string name="authentication_failed">Authentication Failed!</string>
    <string name="first_name_cannot_be_empty">First Name cannot be empty!</string>
    <string name="last_name_cannot_be_empty">Last Name cannot be empty!</string>
    <string name="removed_from_the_project">removed from the project.</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string name="task_name_cannot_be_empty">Task name cannot be empty.</string>
    <string name="assign_task_to_atleast_1_person">Assign task to at least 1 person.</string>
    <string name="user_requests">User Requests</string>
    <string name="project_members">Project Members</string>
    <string name="you_cannot_remove_yourself">You cannot remove yourself.</string>
    <string name="chats">Chats</string>
    <string name="chat_unavailable">Chat Unavailable!</string>
    <string name="type_a_message">Type a message..</string>
    <string name="welcome">Welcome,</string>
    <string name="please_click">Please click </string>
    <string name="continue_text">Continue</string>
    <string name="to_join_your_first_project">to join your first project.</string>
    <string name="if_you_wish_to_join_later">If you wish to join later,</string>
    <string name="click">click </string>
    <string name="skip">Skip</string>
    <string name="project">Project </string>
    <string name="search">Search</string>
    <string name="enter_project_code">Enter Project Code</string>
    <string name="unable_to_find_any_projects">Oops! Unable to find any projects.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="manager">Manager?</string>
    <string name="join_project">Join Project?</string>
    <string name="project_code">Project Code :\t</string>
    <string name="project_name">Project Name :\t</string>
    <string name="project_manager">Project Manager :\t</string>
    <string name="join_as_manager">Join as Manager\t</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="enter_authorization_code">Please enter the 5-digit Authorization code for this project</string>
    <string name="submit">Submit</string>
    <string name="authorization_successful">Authorization Successful!\nPlease continue to complete your Sign Up process.</string>
    <string name="delete_task">Delete Task?</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="leave_project">Leave Project</string>
    <string name="leave_project_confirmation">Are you sure you want to leave this project?</string>
    <string name="remove_from_project">Remove from project</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove</string>
    <string name="from_this_project">from this project?</string>
    <string name="task_name">Task Name</string>
    <string name="assign_to">Assign To :\t</string>
    <string name="priority">Priority :\t</string>
    <string name="create">Create</string>
    <string name="manager_already_exists_text">This project already has a Manager. Please try a different project.</string>
    <string name="close">Close</string>
    <string name="done_text">Done</string>
    <string name="done">Done</string>
    <string name="todo">To Do</string>
    <string name="doing">Doing</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search_tasks">Search Tasks…</string>
    <string name="you_have_not_joined_a_project_yet">You have not joined \na project yet,\n</string>
    <string name="join_now">Join Now?</string>
    <string name="current_project">Current Project</string>
    <string name="show_project_members">Show Project Members</string>
    <string name="add_to_project">Add to Project</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
</resources>