<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_project"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/dark_grey"
        android:paddingVertical="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_project_confirmation"
        android:textSize="22sp"
        android:textColor="@color/medium_grey"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/alert_dialog_confirm_leave_project_no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"/>


        <Button
            android:id="@+id/alert_dialog_confirm_leave_project_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

</LinearLayout>