<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sign_in.SignInActivity">

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/sing_text"
        android:textSize="65dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/in_text"
        android:textColor="@color/green"
        android:textSize="65dp"
        android:textStyle="bold" />
  </LinearLayout>
  <LinearLayout
      android:gravity="center"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_email_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/signin_email_editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/green"
          android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_password_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false"
        app:passwordToggleTint="@color/green"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/signin_password_editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/green"
          android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signin_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in_text"
        android:textColor="@color/green" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/no_account_text"
          android:textSize="18dp" />

      <TextView
          android:id="@+id/SignIn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:text="@string/sign_up_text"
          android:textColor="@color/green"
          android:textSize="20dp"
          android:textStyle="bold" />
    </LinearLayout>

  </LinearLayout>
</LinearLayout>